...
    <string name="settings_row_default_font">Default font</string>
    <string name="settings_row_message">Messages</string>
    <string name="settings_row_pushbackground">Background push for new messages</string>
    <string name="settings_row_quick_reply">Quick reply</string>
    <string name="settings_section_about">About</string>
    <string name="settings_section_account">Account</string>
    <string name="settings_section_general">General</string>
    <string name="settings_section_legal">Legal</string>
    <string name="settings_section_notification">Notifications</string>
    <string name="settings_server_host_unknown">Unknown</string>
    <string name="settings_server_version_label">Server version</string>
    <string name="settings_server_version_placeholder">—</string>
    <string name="settings_terms_of_service">Terms of service</string>
...
